# extensions-PostProcess

./: CMakeLists.txt  Setup.cmake
Renderers/OpenGL/: PostProcessRenderingView.cpp  PostProcessRenderingView.h
Scene/: PostProcessNode.cpp  PostProcessNode.h
data/: Chocolux.glsl  DepthOfField.glsl  EdgeDetection.glsl  EdgeDetection.glsl.frag  LavaLight.glsl  LavaLight.glsl.frag  MotionBlur1.frag  Pixelate.glsl  Pixelate.glsl.frag  Shadow.glsl  Shadow.glsl.frag  ViewMotionBlur.glsl  VolumetricScattering.glsl  VolumetricScattering.glsl.frag  Wobble.glsl  Wobble.glsl.frag  default.glsl.vert
shaders/: MotionBlur.frag  MotionBlur1.glsl
